--- a/layer-mint/src/components/landing/landing.css
+++ b/layer-mint/src/components/landing/landing.css
@@ -5,5 +5,5 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    /* overflow-y: scroll; */
+    overflow-x: scroll;
 }
